UTLXe Memory Model and Leak Analysis plus ZGC